--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <button id = "all">All</button>
         </div>
         <div class = "search">
-            <p>Sort By:</p>
+            <label for = "sortBy">Sort By:</label>
             <select id = "sortBy" name = "sortBy">
                 <option value = "all">All</option>
                 <option value = "seniority">Seniority</option>
