--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <h1>People Of Congress</h1>
     </header>
     <main>
+        <h2>Learn More About Our Lawmakers</h2>
         <div id = "search" class = "search">
             <button id = "senate">Senate</button>
             <button id = "house">House of Representatives</button>
